@@ -1,9 +1,9 @@
 package com.codegym.bestticket.service.impl.ticket;
 
-import com.codegym.bestticket.dto.request.ticket_type.TicketTypeRequestDTO;
-import com.codegym.bestticket.dto.response.ticket_type.TicketTypeResponseDTO;
 import com.codegym.bestticket.entity.ticket.TicketType;
-import com.codegym.bestticket.repository.ITicketTypeRepository;
+import com.codegym.bestticket.payload.request.ticket.TicketTypeRequest;
+import com.codegym.bestticket.payload.response.ticket.TicketTypeResponse;
+import com.codegym.bestticket.repository.ticket.ITicketTypeRepository;
 import com.codegym.bestticket.service.ITicketTypeService;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.BeanUtils;
@@ -11,48 +11,50 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @AllArgsConstructor
 @Service
 public class TicketTypeService implements ITicketTypeService {
 
-
     private final ITicketTypeRepository ticketTypeRepository;
 
-
-
     @Override
-    public List<TicketTypeRequestDTO> getAllTicketType() {
-        Iterable<TicketType> tickets = ticketTypeRepository.findAll();
+    public List<TicketTypeRequest> getAllTicketType() {
+        Iterable<TicketType> ticketTypes = ticketTypeRepository.findAll();
 
-        return StreamSupport.stream(tickets.spliterator(), true)
+        return StreamSupport.stream(ticketTypes.spliterator(), true)
+                .filter(ticketType -> !ticketType.getIsDeleted())
                 .map(ticketType -> {
-                    TicketTypeRequestDTO ticketTypeRequestDTO =  TicketTypeRequestDTO.builder().build();
-                    BeanUtils.copyProperties(ticketType, ticketTypeRequestDTO);
-                    return ticketTypeRequestDTO;
+                    TicketTypeRequest ticketTypeRequest = new TicketTypeRequest();
+                    BeanUtils.copyProperties(ticketType, ticketTypeRequest);
+                    return ticketTypeRequest;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     @Override
-    public TicketTypeResponseDTO getTicketTypeById(UUID id) {
+    public TicketTypeResponse getTicketTypeById(UUID id) {
         TicketType ticketType = ticketTypeRepository.findById(id).orElse(null);
-        TicketTypeResponseDTO ticketTypeResponseDTO1 =  TicketTypeResponseDTO.builder().build();
+
+        TicketTypeResponse ticketTypeResponse = new TicketTypeResponse();
         assert ticketType != null;
-        BeanUtils.copyProperties(ticketType,ticketTypeResponseDTO1);
-        return ticketTypeResponseDTO1;
+        if (Boolean.FALSE.equals(ticketType.getIsDeleted())) {
+            BeanUtils.copyProperties(ticketType, ticketTypeResponse);
+            return ticketTypeResponse;
+        }
+        return null;
+
     }
 
     @Override
-    public TicketTypeRequestDTO createTicketType(TicketTypeRequestDTO ticketTypeRequestDTO) {
+    public TicketTypeRequest createTicketType(TicketTypeRequest ticketTypeRequest) {
         TicketType ticketType = new TicketType();
-        BeanUtils.copyProperties(ticketTypeRequestDTO,ticketType);
+        BeanUtils.copyProperties(ticketTypeRequest, ticketType);
         ticketType = ticketTypeRepository.save(ticketType);
-        TicketTypeRequestDTO resultTicketRequestDTO =  TicketTypeRequestDTO.builder().build();
-        BeanUtils.copyProperties(ticketType,resultTicketRequestDTO);
+        TicketTypeRequest resultTicketRequestDTO = new TicketTypeRequest();
+        BeanUtils.copyProperties(ticketType, resultTicketRequestDTO);
 
         return resultTicketRequestDTO;
     }
@@ -61,18 +63,16 @@ public class TicketTypeService implements ITicketTypeService {
     public void deleteTicketType(UUID id) {
         TicketType ticketType = ticketTypeRepository.findById(id).orElse(null);
         assert ticketType != null;
-        ticketType.setIsDelete(true);
+        ticketType.setIsDeleted(true);
         ticketTypeRepository.save(ticketType);
     }
 
     @Override
-    public void updateTicketType(TicketTypeResponseDTO ticketTypeResponseDTO) {
-        TicketType ticketType = ticketTypeRepository.findById(ticketTypeResponseDTO.getId()).orElse(null);
+    public void updateTicketType(TicketTypeResponse ticketTypeResponse) {
+        TicketType ticketType = ticketTypeRepository.findById(ticketTypeResponse.getId()).orElse(null);
         assert ticketType != null;
-        BeanUtils.copyProperties(ticketTypeResponseDTO,ticketType);
+        BeanUtils.copyProperties(ticketTypeResponse, ticketType);
 
         ticketTypeRepository.save(ticketType);
     }
-
-
 }
